@@ -13,6 +13,7 @@
 * tabulatedelays: allow backing out axis offset effects, allow external file to provide list of MJDs
 * tabulatedelays: option added to print the antenna coordinates as comments in the output
 * read and write J2000 station position polynomials; option in tabulatedelays to evaluate
+* new utility: difxfilelist: read through .input file(s) and list files to be read, data format, ...
 
 3.6.0
 * Post DiFX 2.5
